[gd_scene load_steps=32 format=3 uid="uid://dh0dt8b5o2yg1"]

[ext_resource type="Script" path="res://scripts/main_scene.gd" id="1_5oejp"]
[ext_resource type="Texture2D" uid="uid://dy7ubts3wma1p" path="res://sprites/shelf.svg" id="1_6atf7"]
[ext_resource type="Script" path="res://scripts/meditation_menu.gd" id="1_8s6u5"]
[ext_resource type="Texture2D" uid="uid://b3coic1swxplg" path="res://sprites/panel_button.svg" id="1_njh2d"]
[ext_resource type="Script" path="res://scripts/settings_menu.gd" id="2_jy6c2"]
[ext_resource type="Script" path="res://scripts/settings_back_button.gd" id="3_cfrfu"]
[ext_resource type="Script" path="res://scripts/main_menu.gd" id="4_8owsi"]
[ext_resource type="Texture2D" uid="uid://eq0qyc83koaj" path="res://sprites/back_button.svg" id="4_aifvn"]
[ext_resource type="Script" path="res://scripts/subject_button.gd" id="4_u4kv6"]
[ext_resource type="Texture2D" uid="uid://n64dnplmqeiu" path="res://sprites/full_shade_circle.svg" id="5_cksha"]
[ext_resource type="Texture2D" uid="uid://jfudr55s8ms" path="res://sprites/back_button_pressed.svg" id="5_j3bww"]
[ext_resource type="Script" path="res://scripts/back_button.gd" id="5_x7m7k"]
[ext_resource type="Texture2D" uid="uid://bw4rheleiiqmo" path="res://sprites/panel_pressed.svg" id="6_iigh6"]
[ext_resource type="Texture2D" uid="uid://vunk7lw7ndaf" path="res://sprites/play_button.svg" id="7_vidsj"]
[ext_resource type="Texture2D" uid="uid://2uu87fbynqvx" path="res://sprites/half_shade_circle.svg" id="8_apw4y"]
[ext_resource type="Texture2D" uid="uid://cc4fdk1xfxuke" path="res://sprites/play_button_pressed.svg" id="10_e2dib"]
[ext_resource type="FontFile" uid="uid://cw35ckg6yyyxj" path="res://fonts/Carlito-Bold.ttf" id="11_182j1"]
[ext_resource type="Script" path="res://scripts/play_button.gd" id="11_jm5l5"]
[ext_resource type="Texture2D" uid="uid://bvhk36dlcbuo6" path="res://sprites/pause_button.svg" id="12_mfhxx"]
[ext_resource type="Script" path="res://scripts/screen_size.gd" id="12_q4nh6"]
[ext_resource type="Texture2D" uid="uid://yewwnbvokvsc" path="res://sprites/pause_button_pressed.svg" id="13_m41mq"]
[ext_resource type="Texture2D" uid="uid://bbyij7swcrbgs" path="res://sprites/stop_button.svg" id="14_dx7pl"]
[ext_resource type="Texture2D" uid="uid://dmoq3de8326mb" path="res://sprites/stop_button_pressed.svg" id="15_6y0nh"]
[ext_resource type="Script" path="res://scripts/extra_button.gd" id="16_txljw"]
[ext_resource type="FontFile" uid="uid://cg8h28kd1yopx" path="res://fonts/Carlito-Regular.ttf" id="16_wfxkp"]
[ext_resource type="Texture2D" uid="uid://c56xcpm1a8ru0" path="res://sprites/meditation_settings.svg" id="17_3gyys"]
[ext_resource type="Texture2D" uid="uid://b4m2g52ve87mc" path="res://sprites/meditation_settings_pressed.svg" id="18_c0qx3"]
[ext_resource type="Texture2D" uid="uid://csgdla7pvb65w" path="res://icon.svg" id="24_3ol0p"]
[ext_resource type="Script" path="res://scripts/user_data.gd" id="27_mt35l"]
[ext_resource type="Texture2D" uid="uid://do3fho00d6ndy" path="res://sprites/silent_v2.svg" id="28_inoh7"]

[sub_resource type="Curve" id="Curve_wefxq"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.318328, 1), 0.0, 0.0, 0, 0]
point_count = 2

[node name="main_scene" type="Node2D"]
script = ExtResource("1_5oejp")

[node name="audio" type="AudioListener2D" parent="."]
current = true

[node name="settings_menu" type="Node2D" parent="."]
z_index = 200
position = Vector2(0, 4802)
script = ExtResource("2_jy6c2")
move_curve = SubResource("Curve_wefxq")
blackout_percentage = 0.33

[node name="blackout" type="ColorRect" parent="settings_menu"]
offset_left = -1255.0
offset_top = -3925.0
offset_right = 2130.0
offset_bottom = 2608.0
color = Color(0, 0, 0, 0)

[node name="back_button" type="TextureButton" parent="settings_menu"]
offset_left = -1.0
offset_top = -2403.0
offset_right = 1076.0
offset_bottom = -4.0
script = ExtResource("3_cfrfu")

[node name="background" type="TextureRect" parent="settings_menu"]
clip_children = 1
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_6atf7")

[node name="color" type="ColorRect" parent="settings_menu/background"]
layout_mode = 0
offset_left = -119.0
offset_top = -40.0
offset_right = 1222.0
offset_bottom = 2490.0
color = Color(0.968627, 0.956863, 0.960784, 1)

[node name="content_parent" type="VBoxContainer" parent="settings_menu"]
offset_right = 40.0
offset_bottom = 330.0
theme_override_constants/separation = 0

[node name="filler_top" type="Control" parent="settings_menu/content_parent"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="content_text" type="VBoxContainer" parent="settings_menu/content_parent"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="content" type="VBoxContainer" parent="settings_menu/content_parent"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="filler_bottom" type="Control" parent="settings_menu/content_parent"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="meditation_menu" type="Node2D" parent="."]
z_index = 100
position = Vector2(0, 2400)
script = ExtResource("1_8s6u5")
move_curve = SubResource("Curve_wefxq")
half_shade_rpm = 0.25
full_shade_rpm = 0.2

[node name="blackout" type="ColorRect" parent="meditation_menu"]
offset_left = -1255.0
offset_top = -3374.0
offset_right = 2130.0
offset_bottom = 2356.0
color = Color(0, 0, 0, 0)

[node name="background" type="TextureRect" parent="meditation_menu"]
self_modulate = Color(0.168627, 0.572549, 0.45098, 1)
clip_children = 2
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_6atf7")

[node name="half_shade" type="Node2D" parent="meditation_menu/background"]
position = Vector2(540, 648)

[node name="pivot" type="Node2D" parent="meditation_menu/background/half_shade"]
position = Vector2(0, 4931)
rotation = 3.4767

[node name="half_shade_circle" type="TextureRect" parent="meditation_menu/background/half_shade/pivot"]
self_modulate = Color(0.105882, 0.517647, 0.329412, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5000.0
offset_top = -5000.0
offset_right = 5000.0
offset_bottom = 5000.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_apw4y")

[node name="full_shade" type="Node2D" parent="meditation_menu/background"]
position = Vector2(540, 1861)

[node name="pivot" type="Node2D" parent="meditation_menu/background/full_shade"]
position = Vector2(0, 4931)

[node name="full_shade_circle" type="TextureRect" parent="meditation_menu/background/full_shade/pivot"]
self_modulate = Color(0.0509804, 0.45098, 0.219608, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5000.0
offset_top = -5000.0
offset_right = 5000.0
offset_bottom = 5000.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_cksha")

[node name="back_button" type="TextureButton" parent="meditation_menu"]
offset_left = -15.0
offset_top = 15.0
offset_right = 185.0
offset_bottom = 215.0
texture_normal = ExtResource("4_aifvn")
texture_pressed = ExtResource("5_j3bww")
script = ExtResource("5_x7m7k")

[node name="center" type="Node2D" parent="meditation_menu"]
position = Vector2(540, 1153)

[node name="center" type="CenterContainer" parent="meditation_menu/center"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = -225.0
offset_right = 225.0
offset_bottom = 225.0
grow_horizontal = 2
grow_vertical = 2

[node name="container" type="VBoxContainer" parent="meditation_menu/center/center"]
layout_mode = 2

[node name="filler" type="Control" parent="meditation_menu/center/center/container"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="title" type="Label" parent="meditation_menu/center/center/container"]
custom_minimum_size = Vector2(1080, 200)
layout_mode = 2
theme_override_colors/font_color = Color(0.145098, 0.12549, 0.129412, 1)
theme_override_fonts/font = ExtResource("16_wfxkp")
theme_override_font_sizes/font_size = 90
text = "Silence"
horizontal_alignment = 1

[node name="play_button_container" type="CenterContainer" parent="meditation_menu/center/center/container"]
layout_mode = 2

[node name="play_button" type="TextureButton" parent="meditation_menu/center/center/container/play_button_container"]
layout_mode = 2
texture_normal = ExtResource("7_vidsj")
texture_pressed = ExtResource("10_e2dib")
script = ExtResource("11_jm5l5")
unpressed_play_texture = ExtResource("7_vidsj")
pressed_play_texture = ExtResource("10_e2dib")
unpressed_pause_texture = ExtResource("12_mfhxx")
pressed_pause_texture = ExtResource("13_m41mq")

[node name="timer_container" type="CenterContainer" parent="meditation_menu/center/center/container"]
layout_mode = 2

[node name="timer" type="Control" parent="meditation_menu/center/center/container/timer_container"]
custom_minimum_size = Vector2(450, 125)
layout_mode = 2

[node name="current_time" type="Label" parent="meditation_menu/center/center/container/timer_container/timer"]
layout_mode = 2
offset_right = 203.0
offset_bottom = 100.0
theme_override_colors/font_color = Color(0.145098, 0.12549, 0.129412, 1)
theme_override_fonts/font = ExtResource("11_182j1")
theme_override_font_sizes/font_size = 50
text = "BLA"
horizontal_alignment = 2
vertical_alignment = 2

[node name="of" type="Label" parent="meditation_menu/center/center/container/timer_container/timer"]
layout_mode = 2
offset_right = 450.0
offset_bottom = 100.0
theme_override_colors/font_color = Color(0.145098, 0.12549, 0.129412, 1)
theme_override_fonts/font = ExtResource("11_182j1")
theme_override_font_sizes/font_size = 50
text = "/"
horizontal_alignment = 1
vertical_alignment = 2

[node name="full_time" type="Label" parent="meditation_menu/center/center/container/timer_container/timer"]
layout_mode = 2
offset_left = 245.0
offset_right = 448.0
offset_bottom = 100.0
theme_override_colors/font_color = Color(0.145098, 0.12549, 0.129412, 1)
theme_override_fonts/font = ExtResource("11_182j1")
theme_override_font_sizes/font_size = 50
text = "BLA"
vertical_alignment = 2

[node name="extra_container" type="CenterContainer" parent="meditation_menu/center/center/container"]
layout_mode = 2

[node name="extra_button" type="TextureButton" parent="meditation_menu/center/center/container/extra_container"]
layout_mode = 2
texture_normal = ExtResource("14_dx7pl")
texture_pressed = ExtResource("15_6y0nh")
script = ExtResource("16_txljw")
stop_normal = ExtResource("14_dx7pl")
stop_pressed = ExtResource("15_6y0nh")
settings_normal = ExtResource("17_3gyys")
settings_pressed = ExtResource("18_c0qx3")

[node name="main_menu" type="Node2D" parent="."]
script = ExtResource("4_8owsi")

[node name="top" type="Node2D" parent="main_menu"]

[node name="background" type="ColorRect" parent="main_menu/top"]
offset_right = 1080.0
offset_bottom = 2400.0
color = Color(0.968627, 0.956863, 0.960784, 1)

[node name="center_icons" type="CenterContainer" parent="main_menu/top"]
offset_left = 540.0
offset_top = 348.0
offset_right = 580.0
offset_bottom = 388.0
use_top_left = true

[node name="container" type="VBoxContainer" parent="main_menu/top/center_icons"]
layout_mode = 2

[node name="icon_container" type="CenterContainer" parent="main_menu/top/center_icons/container"]
custom_minimum_size = Vector2(350, 350)
layout_mode = 2

[node name="icon" type="TextureRect" parent="main_menu/top/center_icons/container/icon_container"]
layout_mode = 2
texture = ExtResource("24_3ol0p")

[node name="space" type="Control" parent="main_menu/top/center_icons/container"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="label" type="Label" parent="main_menu/top/center_icons/container"]
layout_mode = 2
theme_override_colors/font_color = Color(0.145098, 0.12549, 0.129412, 1)
theme_override_fonts/font = ExtResource("16_wfxkp")
theme_override_font_sizes/font_size = 70
text = "Simple Meditation Timer"
horizontal_alignment = 1
vertical_alignment = 1

[node name="center" type="Node2D" parent="main_menu"]
position = Vector2(540, 1264)

[node name="center_subjects" type="CenterContainer" parent="main_menu/center"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -75.0
offset_right = 500.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2

[node name="subjects" type="VBoxContainer" parent="main_menu/center/center_subjects"]
custom_minimum_size = Vector2(900, 0)
layout_mode = 2
theme_override_constants/separation = 70

[node name="silent" type="TextureButton" parent="main_menu/center/center_subjects/subjects"]
custom_minimum_size = Vector2(0, 500)
layout_mode = 2
script = ExtResource("4_u4kv6")
unpressed_panel_texture = ExtResource("1_njh2d")
pressed_panel_texture = ExtResource("6_iigh6")
meditation_type = "silent"

[node name="panel" type="NinePatchRect" parent="main_menu/center/center_subjects/subjects/silent"]
layout_mode = 2
offset_right = 900.0
offset_bottom = 500.0
texture = ExtResource("1_njh2d")
region_rect = Rect2(0, 0, 200, 200)
patch_margin_left = 80
patch_margin_top = 80
patch_margin_right = 80
patch_margin_bottom = 80

[node name="panel" type="NinePatchRect" parent="main_menu/center/center_subjects/subjects/silent/panel"]
clip_children = 1
layout_mode = 0
offset_left = 25.0
offset_top = 25.0
offset_right = 925.0
offset_bottom = 425.0
scale = Vector2(0.945, 0.945)
texture = ExtResource("1_njh2d")
region_rect = Rect2(0, 0, 200, 200)
patch_margin_left = 80
patch_margin_top = 80
patch_margin_right = 80
patch_margin_bottom = 80

[node name="image" type="TextureRect" parent="main_menu/center/center_subjects/subjects/silent/panel/panel"]
layout_mode = 0
offset_right = 900.0
offset_bottom = 400.0
texture = ExtResource("28_inoh7")

[node name="label" type="Label" parent="main_menu/center/center_subjects/subjects/silent/panel"]
layout_mode = 0
offset_top = 400.0
offset_right = 900.0
offset_bottom = 486.0
theme_override_colors/font_color = Color(0.145098, 0.12549, 0.129412, 1)
theme_override_fonts/font = ExtResource("16_wfxkp")
theme_override_font_sizes/font_size = 60
text = "Silent"
horizontal_alignment = 1
vertical_alignment = 1

[node name="interval" type="TextureButton" parent="main_menu/center/center_subjects/subjects"]
custom_minimum_size = Vector2(0, 500)
layout_mode = 2
script = ExtResource("4_u4kv6")
unpressed_panel_texture = ExtResource("1_njh2d")
pressed_panel_texture = ExtResource("6_iigh6")
meditation_type = "interval"

[node name="panel" type="NinePatchRect" parent="main_menu/center/center_subjects/subjects/interval"]
layout_mode = 2
offset_right = 900.0
offset_bottom = 500.0
texture = ExtResource("1_njh2d")
region_rect = Rect2(0, 0, 200, 200)
patch_margin_left = 80
patch_margin_top = 80
patch_margin_right = 80
patch_margin_bottom = 80

[node name="panel" type="NinePatchRect" parent="main_menu/center/center_subjects/subjects/interval/panel"]
clip_children = 1
layout_mode = 0
offset_left = 25.0
offset_top = 25.0
offset_right = 925.0
offset_bottom = 425.0
scale = Vector2(0.945, 0.945)
texture = ExtResource("1_njh2d")
region_rect = Rect2(0, 0, 200, 200)
patch_margin_left = 80
patch_margin_top = 80
patch_margin_right = 80
patch_margin_bottom = 80

[node name="image" type="TextureRect" parent="main_menu/center/center_subjects/subjects/interval/panel/panel"]
layout_mode = 0
offset_right = 900.0
offset_bottom = 400.0
texture = ExtResource("28_inoh7")

[node name="label" type="Label" parent="main_menu/center/center_subjects/subjects/interval/panel"]
layout_mode = 0
offset_top = 400.0
offset_right = 900.0
offset_bottom = 486.0
theme_override_colors/font_color = Color(0.145098, 0.12549, 0.129412, 1)
theme_override_fonts/font = ExtResource("16_wfxkp")
theme_override_font_sizes/font_size = 60
text = "Interval"
horizontal_alignment = 1
vertical_alignment = 1

[node name="screen_size" type="Node2D" parent="."]
process_priority = -1
z_index = 1000
script = ExtResource("12_q4nh6")

[node name="debug_label" type="Label" parent="screen_size"]
visible = false
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "BLA
BLA"

[node name="user_data" type="Node2D" parent="."]
script = ExtResource("27_mt35l")
